fix: icon spacing

--- a/src/components/Landing/ServiceSection/service-section.module.css
+++ b/src/components/Landing/ServiceSection/service-section.module.css
@@ -27,17 +27,22 @@
 .service {
     margin-right: 7rem;
     margin-bottom: 3rem;
+    max-width: 180px;
+    height: 250px;
 }
 
 .serviceName {
     text-transform: uppercase;
     text-align: center;
     font-weight: 500;
+    font-size: var(--text-xl);
+    margin-top: 1.5rem;
 }
 
 .serviceImage {
     width: 150px;
     height: 120px;
+    margin: 0 auto;
 }
 @media (max-width: 768px) {
     .root {
